syntax = "proto3";
package runtime.iam.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/metal-toolbox/iam-runtime/pkg/runtime/authentication";

service Authentication { 
  rpc ValidateCredential(ValidateCredentialRequest)
    returns (ValidateCredentialResponse) {}
}

message ValidateCredentialRequest {
  // credential is the literal credential for a subject (such as a bearer token) passed to the
  // application with no transformations applied.
  string credential = 1;
}

message ValidateCredentialResponse {
  // subject_id is the ID of the subject represented by the credential.
  string subject_id = 1;

  // claims is a set of claims about the subject.
  google.protobuf.Struct claims = 2;
}
